--- a/index.html
+++ b/index.html
@@ -131,9 +131,128 @@
        <p>we belive that is a reflection of your unique personality and our mission is to proved you with a devise and tready collection</p>
         </div>
         <div class="flex-1">
-            <img src="./images/easy-purchase.avif"
+            <img src="./images/easy-purchase.avif">
      </div>
     </section>
+    <!-- product section -->
+    <section class="max-w-screen-xl  mx-auto px-8 md:px-16 lg:px-24 py-6 my10">
+      <!-- top product -->
+      <div class="text-center pb-5">
+        <h3 class="text-2xl md:text-4xl font-extrabold">Top Product</h3>
+        <p class="text-sm">Browse from a various collection</p>
+      </div>
+      <div>
+        <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7">
+          
+          <div class="card   bg-base-100  shadow-xl image-full">
+            <figure><img src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Formal shoe!</h2>
+              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-[white]">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="card   bg-base-100  shadow-xl image-full">
+            <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Formal Shirt</h2>
+              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-[white]">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="card   bg-base-100  shadow-xl image-full">
+            <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Trendy T-Shirt!</h2>
+              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-[white]">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="card   bg-base-100  shadow-xl image-full">
+            <figure><img src="./images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif" alt="" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Casual Shirt!</h2>
+              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-[white]">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Faq section -->
+    <section class="max-w-screen-xl  mx-auto px-8 md:px-16 lg:px-24 py-6 my10">
+      <!-- Heading -->
+      <div class="text-center pb-5">
+        <h3 class="text-2xl md:text-4xl font-extrabold">Frequently Asked Question</h3>
+        <p class="text-sm">Browse from a various collection</p>
+      </div>
+      <!-- Accordian -->
+      <div>
+        <div class="collapse collapse-plus bg-base-200 mb-2">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            How can I Purches my product
+          </div>
+          <div class="collapse-content"> 
+            <p>Capitalizing on its high quality merchandise, Coach has won many customers from all over the world.<br> The success of Coach has been a result of competent leadership as well as research. </p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 mb-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+           What's the delevery system
+          </div>
+          <div class="collapse-content"> 
+            <p>Capitalizing on its high quality merchandise, Coach has won many customers from all over the world.<br> The success of Coach has been a result of competent leadership as well as research.</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200 mb-2">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            What's the delevery system
+          </div>
+          <div class="collapse-content"> 
+            <p>Capitalizing on its high quality merchandise, Coach has won many customers from all over the world.<br> The success of Coach has been a result of competent leadership as well as research.</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
 </main>
+<!-- footer section -->
+<footer class="footer p-10 bg-base-200 text-base-content bg-[black]">
+  <div>
+    
+    <p class="text-[white] text-xl">Product shope<br>Huge collection</p>
+  </div> 
+  <div class="text-[white]">
+    <span class="footer-title">Services</span> 
+    <a class="link link-hover">Branding</a> 
+    <a class="link link-hover">Design</a> 
+    <a class="link link-hover">Marketing</a> 
+    <a class="link link-hover">Advertisement</a>
+  </div> 
+  <div class="text-[white]">
+    <span class="footer-title">Company</span> 
+    <a class="link link-hover">About us</a> 
+    <a class="link link-hover">Contact</a> 
+    <a class="link link-hover">Jobs</a> 
+    <a class="link link-hover">Press kit</a>
+  </div> 
+  <div class="text-[white]">
+    <span class="footer-title">Legal</span> 
+    <a class="link link-hover">Terms of use</a> 
+    <a class="link link-hover">Privacy policy</a> 
+    <a class="link link-hover">Cookie policy</a>
+  </div>
+</footer>
 </body>
 </html> 
