--- a/index.html
+++ b/index.html
@@ -144,43 +144,43 @@
       <div>
         <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7">
           
-          <div class="card   bg-base-100  shadow-xl image-full">
+          <div class="card   bg-base-100  shadow-xl ">
             <figure><img src="./images/shiny-black-leather-shoes-exude-modern-luxury-generated-by-ai_188544-36154.avif" alt="Shoes" /></figure>
             <div class="card-body">
               <h2 class="card-title">Formal shoe!</h2>
-              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <p class="text-[black]">our mission is to provide you<br>with a diverse and trendy collection</p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary text-[white]">Buy Now</button>
+                <button class="btn btn-primary text-[black]">Buy Now</button>
               </div>
             </div>
           </div>
-          <div class="card   bg-base-100  shadow-xl image-full">
+          <div class="card   bg-base-100  shadow-xl l">
             <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="" /></figure>
             <div class="card-body">
               <h2 class="card-title">Formal Shirt</h2>
-              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <p class="text-[black]">our mission is to provide you<br>with a diverse and trendy collection</p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary text-[white]">Buy Now</button>
+                <button class="btn btn-primary text-[black]">Buy Now</button>
               </div>
             </div>
           </div>
-          <div class="card   bg-base-100  shadow-xl image-full">
+          <div class="card   bg-base-100  shadow-xl ">
             <figure><img src="./images/blue-yellow-t-shirt-wooden-hanger-generated-by-ai_188544-42185.avif" alt="" /></figure>
             <div class="card-body">
               <h2 class="card-title">Trendy T-Shirt!</h2>
-              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <p class="text-[black]">our mission is to provide you<br>with a diverse and trendy collection</p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary text-[white]">Buy Now</button>
+                <button class="btn btn-primary text-[black]">Buy Now</button>
               </div>
             </div>
           </div>
-          <div class="card   bg-base-100  shadow-xl image-full">
+          <div class="card   bg-base-100  shadow-xl l">
             <figure><img src="./images/elegant-businessman-shirt-wooden-desk-stack-generated-by-ai_188544-34678.avif" alt="" /></figure>
             <div class="card-body">
               <h2 class="card-title">Casual Shirt!</h2>
-              <p class="text-[white]">our mission is to provide you<br>with a diverse and trendy collection</p>
+              <p class="text-[black]">our mission is to provide you<br>with a diverse and trendy collection</p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary text-[white]">Buy Now</button>
+                <button class="btn btn-primary text-[black]">Buy Now</button>
               </div>
             </div>
           </div>
@@ -191,7 +191,7 @@
     <section class="max-w-screen-xl  mx-auto px-8 md:px-16 lg:px-24 py-6 my10">
       <!-- Heading -->
       <div class="text-center pb-5">
-        <h3 class="text-2xl md:text-4xl font-extrabold">Frequently Asked Question</h3>
+        <h3 class="text-2xl md:text-4xl font-extrabold">Frequently<span class="text-[#d06c7d]"> Asked Question</span></h3>
         <p class="text-sm">Browse from a various collection</p>
       </div>
       <!-- Accordian -->
